[tool.black]
line-length = 100

[tool.isort]
atomic = true
force_single_line = true
overwrite_in_place = true
profile = "black"

[tool.poetry]
authors = []
description = ""
name = "api_for_test"
version = "0.1.0"

[tool.poetry.dependencies]
python = "~3.8"
Flask = "^2.1.2"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^21.12b0"
ipython = "^7.30.1"
isort = "^5.10.1"
pytest = "^6.2"
pytype = "^2021.5.6"
